# zanjabil_backend

./: Brewfile  Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
scripts/: run-server.sh
src/: db.sqlite3
src/apps/zanjabil_backend/: admin.py  urls.py  views.py
src/apps/zanjabil_backend/migrations/: 0001_initial.py  0002_alter_dish_price.py  0003_alter_dish_price.py  0004_alter_dish_price.py  0005_rename_menu_category_restaurant_menu_user.py  0006_alter_address_latitude_alter_address_longitude.py  0007_alter_menu_options_alter_menucategory_options_and_more.py  0009_alter_menucategory_name.py  0012_alter_address_apartment_alter_address_build_and_more.py
src/zanjabil/: settings.py  urls.py  wsgi.py
src/zb/: views.py
zanjabil/: db.sqlite3  db.sqlite3-journal  manage.py
zanjabil/zanjabil/: asgi.py  settings.py  urls.py
zanjabil/zanjabil_backend/: apps.py  delivery.py  models.py  serializers.py  urls.py  views.py
zanjabil/zanjabil_backend/migrations/: 0001_initial.py  0008_alter_menucategory_icon_alter_menucategory_name.py  0010_remove_menu_category_remove_menucategory_dishes_and_more.py  0011_rename_menu_restaurant_menu_id.py  0013_rename_address_addressmodel_rename_dish_dishmodel_and_more.py
zanjabil/zb/: apps.py
